tests/parser-test-files/bad-files/parse-for.1.error
error: Malformed for expression
  --> test:4:14
   |
 4 |  (define f (for))
   |                ^ expected pattern
