tests/parser-test-files/bad-files/parse-for.1.coal
;; BAD: Parse For
(package test-parser)

(define f (for))
